# fishtest-spsa-lab

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docs/: ALGORITHMS.md  ANALYSIS.md  Algorithms.md  Analysis.md  ELO_FUNCTION_orig.md  Elo_function.md  Noise_ball.md  Rademacher.md  SIMULATOR.md  SPSA_MACRO_VS_MICRO.md  Simulator.md
src/fishtest_spsa_lab/analysis/: __init__.py  common.py  noise_ball.py  optimize_spsa_toy.py  optimize_spsa_toy_orig.py  plot_spsa_schedule.py  rademacher.py  spsa_gradient.py  validate_adam.py  validate_pentanomial.py  validate_sf_adam.py  validate_sf_sgd.py  validate_sgd.py  validate_spsa.py  validate_spsa_u2.py  validate_variance.py
src/fishtest_spsa_lab/simulator/: __init__.py  config.py  main.py  optimizer.py  runner.py
