[project]
name = "fishtest-spsa-lab"
version = "0.1.0"
description = "Simulation and validation laboratory for Fishtest SPSA optimizers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fishtest_spsa_lab"]

[project.scripts]
validate-spsa = "fishtest_spsa_lab.analysis.validate_spsa:main"
validate-sf-sgd-block = "fishtest_spsa_lab.analysis.validate_sf_sgd:main"
validate-sf-adam-block = "fishtest_spsa_lab.analysis.validate_sf_adam:main"
validate-variance = "fishtest_spsa_lab.analysis.validate_variance:main"
validate-adam = "fishtest_spsa_lab.analysis.validate_adam:main"
run-simulation = "fishtest_spsa_lab.simulator.main:main"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "src/fishtest_spsa_lab/vendor",
]
